--- a/style2.css
+++ b/style2.css
@@ -50,6 +50,7 @@
         }
        
         body{
+            transition-delay: 300ms;
             background-image: url(https://www.fonewalls.com/wp-content/uploads/2020/02/iPad-Wallpaper-HD-417.jpg);
             background-size: 100% 200%;
         }
