--- a/style3.css
+++ b/style3.css
@@ -11,7 +11,18 @@
             font-size: 25px;
             border: 5px;
             background-color: rgb(0, 0, 0);
-            color: aliceblue;
+            color: aliceblue; 
+           
+        }
+        input:hover {
+            transition: 300ms;
+            border: 2px solid red;
+            border-radius: 20px;
+            width: 50px;
+            height: 50px;
+            font-size: 25px;
+           background-color: rgb(255, 255, 255);
+            color: rgb(0, 0, 0);
         }
 
         #b1 ,#b2 , #b3 ,#b4 ,#b5 , #b6, #b7 ,#b8 , #b9 ,#b0 {
